[package]
name = "dhl_tracking"
version = "0.1.0"
edition = "2021"
description = "DHL Tracking for Business Customers"
homepage = "https://github.com/Thomas-Zenkel/dhl_tracking"
repository = "https://github.com/Thomas-Zenkel/dhl_tracking"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
url = "2.3.1"
